Fix black label colors invisible on dark backgrounds in dark themes

--- a/app/themes/taiga-dark-2/custom.scss
+++ b/app/themes/taiga-dark-2/custom.scss
@@ -164,3 +164,12 @@ tg-project-menu {
         background: $mass-dark;
     }
 }
+
+// Fix black text that is invisible on dark backgrounds  
+.backlog-table-body {
+    .points {
+        .not-clickable:hover {
+            color: $whitish;
+        }
+    }
+}
